# dmlex-converter

./: .gitignore  Cargo.toml  README.md  gen_rdf.sh
.github/workflows/: static.yml
cli/src/: main.rs
dmlex/: Cargo.toml
dmlex-cli/: Cargo.toml  gen_rdf.sh
dmlex-cli/src/: main.rs
dmlex-web/: README.md
dmlex-web/src/: main.rs
dmlex/examples/: 0.json  0.rdf  0.xml  1.json  1.rdf  10.rdf  10.xml  11.rdf  12.json  12.rdf  12.xml  13.json  13.rdf  13.xml  14.json  14.rdf  14.xml  15.json  15.rdf  15.xml  16.json  16.rdf  16.xml  17.json  17.rdf  17.xml  18.json  18.rdf  18.xml  19.rdf  19.xml  2.rdf  20.rdf  20.xml  21.rdf  21.xml  22.rdf  22.xml  23.json  23.rdf  (+17 more)
dmlex/src/: lib.rs  model.rs  model_xml.rs  rdf.rs  read_xml.rs  serialization.rs  validate.rs  write_xml.rs
examples/: 0.json  0.rdf  0.xml  1.json  1.rdf  1.xml  10.json  10.rdf  10.xml  11.json  11.rdf  12.json  12.rdf  12.xml  13.json  13.rdf  13.xml  14.json  14.rdf  14.xml  15.json  15.rdf  15.xml  16.json  16.rdf  16.xml  17.json  17.rdf  17.xml  18.json  18.rdf  18.xml  19.json  19.rdf  19.xml  2.json  2.rdf  2.xml  20.json  20.rdf  (+29 more)
src/: main.rs  model.rs  model_xml.rs  rdf.rs  serialization.rs  write_xml.rs
web/: Cargo.toml  index.html  tailwind.config.js
web/src/: main.rs
