[package]
name = "dmlex-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.6.0"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
xml = "0.8.0"
sophia = "0.7.2"
thiserror = "1.0.50"
clap = { version = "4.4.10", features = ["derive"] }
