[package]
name = "dmlex-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmlex = { "path" = "../dmlex" }
clap = { version = "4.4.10", features = ["derive"] }
serde-xml-rs = "*"
serde_json = "*"
sophia = "*"
thiserror = "*"

